--- a/components/Header/Navbar.module.scss
+++ b/components/Header/Navbar.module.scss
@@ -1,12 +1,16 @@
-.list {
-  display: flex;
-  justify-content: space-between;
-}
 .link {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  margin-left: 40px;
+  gap: 15px;
   text-decoration: none;
   color: black;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 300;
+  padding-left: 30px;
+  padding-top: 10px;
+  transition: background-color 0.3s, color 0.3s;
+  &:hover {
+    color: rgb(30, 83, 255);
+  }
 }
