--- a/components/Header/Navbar/Navbar.module.scss
+++ b/components/Header/Navbar/Navbar.module.scss
@@ -4,7 +4,7 @@
   margin-left: 40px;
   gap: 15px;
   text-decoration: none;
-  color: black;
+  color: rgb(17, 17, 17);
   font-size: 20px;
   font-weight: 300;
   padding-left: 30px;
