--- a/components/Header/Navbar/Navbar.module.scss
+++ b/components/Header/Navbar/Navbar.module.scss
@@ -11,6 +11,6 @@
   padding-top: 10px;
   transition: background-color 0.3s, color 0.3s;
   &:hover {
-    color: rgb(30, 83, 255);
+    color: #2a7bf6;
   }
 }
