--- a/src/components/NewProducts/newProducts.module.scss
+++ b/src/components/NewProducts/newProducts.module.scss
@@ -1,13 +1,22 @@
-.box{
+.box {
   margin-top: 30px;
 }
-.flex{
+.flex {
   display: flex;
   justify-content: space-between;
 }
-.link{
+.link {
   padding-top: 20px;
 }
-.line{
+.line {
   color: gainsboro;
+}
+.h2 {
+  font-weight: 400;
+  font-size: 25px;
+}
+.linkText {
+  font-weight: 300;
+  color: black;
+  text-decoration: none;
 }
