--- a/src/components/NewProducts/NewProductsCatalog/NewProductsCatalog.module.scss
+++ b/src/components/NewProducts/NewProductsCatalog/NewProductsCatalog.module.scss
@@ -1,8 +1,37 @@
 .flex {
   display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
 }
 .img {
-  width: 13px;
-  height: 12px;
-  object-fit: cover; /* Или любое другое значение, которое лучше всего соответствует вашим требованиям */
+  justify-content: center;
+}
+.box {
+  padding: 10px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  width: 300px;
+  height: 350px;
+}
+.star {
+  display: flex;
+  justify-content: flex-end;
+  object-fit: cover;
+  width: 12px;
+  height: 13px;
+}
+.imgRating {
+  display: flex;
+}
+.ratingContainer {
+  margin-top: auto; /* Помещаем рейтинг в конец блока */
+
+  display: flex;
+  align-items: center; /* Центрируем содержимое вертикально */
+}
+.ratingValue {
+  margin-left: 5px;
+}
+.wholeBox {
+  display: flex;
+  justify-content: center;
 }
