--- a/src/components/Hero/Heading/Button/Button.module.scss
+++ b/src/components/Hero/Heading/Button/Button.module.scss
@@ -13,7 +13,17 @@
   background-color: #de570f;
 }
 .bg {
-  overflow-x: hidden;
+  position: absolute;
+  width: 350px;
+  height: 495px;
+  top: calc(50% - 250px);
+  left: calc(50% - 175px);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  cursor: default;
+  padding: 40px 20px;
+}
+.modalWindow {
   position: absolute;
   width: 350px;
   height: 495px;
