--- a/src/components/Hero/Heading/Button/Button.module.scss
+++ b/src/components/Hero/Heading/Button/Button.module.scss
@@ -25,12 +25,59 @@
 }
 .modalWindow {
   position: absolute;
-  width: 350px;
-  height: 495px;
+  width: auto;
+  height: auto;
   top: calc(50% - 250px);
   left: calc(50% - 175px);
   border-radius: 10px;
+  border-color: #0d0c22;
   background-color: rgb(255, 255, 255);
   cursor: default;
   padding: 40px 20px;
+}
+.title {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.inputMail {
+  height: 45px;
+  line-height: 30px;
+  padding: 0 5rem;
+  padding-left: 3rem;
+  border: 2px solid transparent;
+  border-radius: 10px;
+  outline: none;
+  background-color: #f8fafc;
+  border-color: #b4b4b4;
+  color: #0d0c22;
+  transition: 0.5s ease;
+}
+
+.inputPassword {
+  margin-top: 15px;
+  height: 45px;
+  line-height: 30px;
+  padding: 0 5rem;
+  padding-left: 3rem;
+  border: 2px solid transparent;
+  border-radius: 10px;
+  outline: none;
+  background-color: #f8fafc;
+  color: #0d0c22;
+  border-color: #b4b4b4;
+  transition: 0.5s ease;
+}
+.inputMail::placeholder {
+  color: #94a3b8;
+}
+.inputPassword::placeholder {
+  color: #94a3b8;
+}
+.inputPassword:focus,
+input:hover {
+  outline: none;
+  border-color: rgb(248, 206, 129);
+  background-color: #fff;
+  box-shadow: 0 0 0 5px rgba(248, 187, 129, 0.3);
 }
