--- a/src/components/Hero/Heading/Button/ModalRegistrationForm.module.scss
+++ b/src/components/Hero/Heading/Button/ModalRegistrationForm.module.scss
@@ -43,7 +43,7 @@
   border-color: #0d0c22;
   background-color: rgb(255, 255, 255);
   cursor: default;
-  padding: 10px 15px 10px 15px;
+  padding: 20px 20px 20px 20px;
 }
 .title {
   display: flex;
@@ -97,9 +97,9 @@
 .inputPassword:focus,
 input:hover {
   outline: none;
-  border-color: rgb(248, 206, 129);
+  border-color: #0c68f4;
   background-color: #fff;
-  box-shadow: 0 0 0 5px rgba(248, 187, 129, 0.3);
+  box-shadow: 0 0 0 5px #0c69f42b;
 }
 
 .imgContainer {
@@ -126,7 +126,19 @@ input:hover {
   box-shadow: none;
   padding: 15px 80px 15px 80px;
   text-decoration: none;
-  :hover {
-    background-color: #093a83;
-  }
+  font-weight: 300;
+  transition: 0.3s ease;
+}
+.logInButton:hover {
+  background-color: #093a83;
+}
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  transition: 0.5s ease;
+}
+.closeButton:hover {
+  transform: scale(1.2);
 }
