--- a/src/components/Hero/Heading/Button/ModalRegistrationForm.module.scss
+++ b/src/components/Hero/Heading/Button/ModalRegistrationForm.module.scss
@@ -11,6 +11,8 @@
 }
 .button:hover {
   background-color: #de570f;
+  transition: all 0.1s ease-in-out;
+  padding: 13px 78px 13px 78px;
 }
 .bg {
   position: absolute;
