fixing New Products box master

--- a/src/components/NewProducts/NewProductsCatalog/NewProductsCatalog.module.scss
+++ b/src/components/NewProducts/NewProductsCatalog/NewProductsCatalog.module.scss
@@ -8,7 +8,8 @@
 }
 .box {
   padding: 10px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  border-radius: 10px;
   width: 300px;
   height: 350px;
 }
@@ -34,4 +35,7 @@
 .wholeBox {
   display: flex;
   justify-content: center;
+}
+.productImg {
+  width: 256px;
 }
