--- a/src/components/Hero/Heading/Button/ModalRegistrationForm.module.scss
+++ b/src/components/Hero/Heading/Button/ModalRegistrationForm.module.scss
@@ -57,6 +57,7 @@
 .inputMail {
   font-size: 20px;
   height: 45px;
+  font-family: 'Montserrat', sans-serif;
   line-height: 30px;
   padding-top: 3px;
   padding-bottom: 3px;
@@ -72,6 +73,7 @@
 }
 
 .inputPassword {
+  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   margin-top: 15px;
   height: 45px;
@@ -112,8 +114,10 @@ input:hover {
   padding-top: 15px;
 }
 .keepMeLoggedIn {
-  font-size: 15px;
+  font-size: 13px;
   padding-left: 5px;
+  font-weight: 200;
+  font-family: 'Montserrat ', sans-serif;
 }
 .logInBtnWrapper {
   display: flex;
