--- a/src/components/Sales/SalesCarousel/SalesCarousel.module.scss
+++ b/src/components/Sales/SalesCarousel/SalesCarousel.module.scss
@@ -1,36 +1,40 @@
-.flex{
+.flex {
   display: flex;
 }
-.h3{
+.h3 {
   color: black;
   font-weight: 300;
 }
-.padding{
+.padding {
   background-color: aliceblue;
   padding-top: 10px;
   margin-left: 10px;
   padding-bottom: 50px;
 }
-.percent{
+.percent {
   border-radius: 10px;
   background-color: #fddbc9;
   color: #f25d0c;
   border-width: solid;
   padding-left: 4px;
   padding-right: 4px;
-  width: 45px
+  width: 45px;
 }
-.priceFlex{
+.priceFlex {
   display: flex;
   justify-content: space-between;
 }
-.noDiscountPrice{
+.noDiscountPrice {
   text-decoration: line-through;
 }
-.discountPrice{
+.discountPrice {
   justify-content: end;
 }
-.boxPadding{
+.boxPadding {
   padding-top: 50px;
   padding-left: 20px;
+}
+.box {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  border-radius: 10px;
 }
