--- a/src/components/OurBlogs/OurBlogs.module.scss
+++ b/src/components/OurBlogs/OurBlogs.module.scss
@@ -10,3 +10,18 @@
 .link:hover {
   text-decoration: underline;
 }
+.line {
+  .line {
+    color: gainsboro;
+  }
+}
+.h2 {
+  font-weight: 400;
+  font-size: 25px;
+}
+.linkBox {
+  padding-top: 30px;
+}
+.container {
+  margin-top: 50px;
+}
