--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,20 +1,18 @@
 .footerBox {
-  background: #4776e6; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #8e54e9, #4776e6); /* Chrome 10-25, Safari 5.1-6 */
+  background: rgb(2, 23, 54);
   background: linear-gradient(
-    to right,
-    #8e54e9,
-    #4776e6
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    180deg,
+    rgba(2, 23, 54, 1) 84%,
+    rgba(3, 41, 98, 1) 92%,
+    rgba(4, 82, 196, 1) 100%
+  );
   margin-top: 20px;
-  padding: 15px;
+  padding: 20px 10px 15px 30px;
   color: white;
   border-radius: 10px;
   bottom: 0;
   left: 0;
   width: 100%;
   z-index: 1000;
-  opacity: 0.8;
   transition: opacity 0.5s;
 }
