--- a/src/components/OurBlogs/OurBlogs.module.scss
+++ b/src/components/OurBlogs/OurBlogs.module.scss
@@ -11,9 +11,7 @@
   text-decoration: underline;
 }
 .line {
-  .line {
-    color: gainsboro;
-  }
+  color: ghostwhite;
 }
 .h2 {
   font-weight: 400;
