--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,11 +1,11 @@
 .container {
   margin: 0 auto;
   padding: 15px;
-  width: 80%;
+  padding-bottom: 0px;
 }
 
 .heroContent {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}/*# sourceMappingURL=App.module.css.map */
+} /*# sourceMappingURL=App.module.css.map */
